# content_verification_tool

./: .env.example  .gitignore  20190124110509177_Google cert petition.docx  CLAUDE.md  ErrorTracking.md  LICENSE  README.md  SETUP.md  Streamlit-Refactor.md  ai-verification-layer.md  corpus-panel-implementation-report.md  deploy.sh  docker-compose.yml  docling_performance_optimization.md  frontend-minimalist-refactor.md  frontend_redesign_plan.md  gemini_demo.ipynb  gemini_features.ipynb  processing_demo.ipynb  processing_features.ipynb  pyproject.toml  start_all.sh  start_backend.sh  start_frontend.sh  verification_assessment_report.md  verification_fixes_needed.md  verification_shell.json
.plans/: corpus-panel-refactor.md
backend/: .dockerignore  Dockerfile  requirements.txt  test_langchain_fixes.py
backend/app/: __init__.py  cache.py  chunker.py  document_processor.py  gemini_service.py  main.py  models.py  output_generator.py
backend/app/corpus/: __init__.py  corpus_manager.py
backend/app/processing/: __init__.py  chunker.py  document_processor.py  document_processor_optimized.py  output_generator.py
backend/app/verification/: __init__.py  gemini_verifier.py
frontend/: .dockerignore  Dockerfile  app.py  main.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/app/: __init__.py  api_client.py  config.py  corpus.py  freshfields_styles.py  state.py  styles.py  ui_components.py
frontend/mockups/: README.md  design_1_professional_dashboard.py  design_2_split_screen.py  design_3_minimalist_cards.py  design_4_premium_legal.py  design_4_professional_workflow.py  design_5_single_screen_mvp.py  design_6_freshfields_single_screen_mvp.py  design_6_mvp.py  design_6_old.py  view_all_designs.sh
tests/: QUICK_START.md  README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_api_endpoints.py  test_chunker.py  test_chunker_langchain_fix.py  test_docling_optimization.py  test_document_processor.py  test_e2e_workflows.py  test_gemini_metadata_extraction.py  test_gemini_verification_loop.py  test_output_generator.py  test_processing_performance.py
tests/data/: .gitkeep
verification_examples/: AgentQuality-ToBeVerified.docx
